cmake_minimum_required(VERSION 3.8)
project(program_2_list_array_implementation_Ashwood3708)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        .gitignore
        README.md
        List_Array_Implentation/main.cpp
        List_Array_Implentation/List_Array.cpp
        List_Array_Implentation/List_Array.h)

add_executable(program_2_list_array_implementation_Ashwood3708 ${SOURCE_FILES})